<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>

    <string name="app_name">MarzecPro</string>
    <string name="unsupported_device_body">Your device is not supported by MarzecPro. Therefore, this app is useless to you, we recommend uninstalling it.</string>
    <string name="uninstall_button_title">Uninstall MarzecPro</string>
    <string name="pref_start_automatically_title">Start Automatically?</string>
    <string name="pref_start_on_mount_summary">Automatically start whenever your SD Card is mounted</string>
    <string name="pref_start_on_boot_summary">Automatically start whenever Android is booted</string>
    <string name="pref_use_checksum_title">Checksum Image on Start?</string>
    <string name="pref_use_checksum_summary">LOL</string>
    <string name="pref_limit_to_4gb_title">2GB Usage Limit</string>
    <string name="pref_limit_to_4gb_summary">Most SD Cards have FAT filesystems, which can have a file size limit of 2GB.</string>
    <string name="pref_image_path_title">MarzecPro Path</string>
    <string name="pref_image_path_summary">The path to the disk image file that MarzecPro is installed on (default: /sdcard/marzec.img)</string>
    <string name="pref_post_start_title">Post-start Script</string>
    <string name="pref_post_start_summary">Script to run after MarzecPro is started (default: /etc/init.d/rc 2)</string>
    <string name="pref_pre_stop_title">Pre-stop Script</string>
    <string name="pref_pre_stop_summary">Script to run before MarzecPro is stopped (default: /etc/init.d/rc 0)</string>
    <string name="pref_prevent_sleep_title">Prevent Sleep</string>
    <string name="pref_prevent_sleep_summary">prevent the device from sleeping while MarzecPro is running</string>
    <string name="menu_jackpal_terminal_title">Open Terminal…</string>
    <string name="menu_preferences_title">Settings</string>
    <string name="menu_install_log_title">View Install Log</string>
    <string name="menu_delete_title">Delete All</string>
    <string name="title_start">Start MarzecPro</string>
    <string name="title_stop">Stop MarzecPro</string>
    <string name="title_configure">Configure MarzecPro</string>
    <string name="title_status">Status:</string>
    <string name="doit">Delete Setup</string>
    <string name="cancel">Cancel</string>
    <string name="blank">(blank)</string>
    <string name="confirm_delete_message">Are you sure you want to delete MarzecPro?</string>
    <string name="release">_</string>
    <string name="mirror">-</string>
    <string name="arch">l</string>
    <string name="image_size">Image Size:</string>
    <string name="megabytes">MB</string>
    <string name="install">Install</string>
    <string name="uninstall">Uninstall…</string>
    <string name="get_superuser">Get Superuser…</string>
    <string name="needs_superuser_message">MarzecPro needs root access, install Superuser</string>
    <string name="smaller_imagesize_message">Not enough space for specified image size, reducing size to fit on SD Card</string>
    <string name="image_size_limit_message">SD Cards usually cannot support files larger than 2GB!  You can turn off this limit in the Settings.</string>
    <string name="mounted_message">MarzecPro mounted</string>
    <string name="not_mounted_message">MarzecPro not mounted</string>
    <string name="not_installed_message">MarzecPro not installed</string>
    <string name="not_configured_message">Image not configured</string>
    <string name="no_network_message">Network required for install</string>
    <string name="mount_point_not_found_format">The mount point \'%s\' does not exist!</string>
    <string name="no_ext2_message">/proc/filesystems does not list \'ext2\' as a supported filesystem</string>
    <string name="image_path_exists_message">Warning: there is already an existing file at the image path that you have selected!</string>
    <string name="image_path_parent_does_not_exist_message">The folder you choose does not exist! Resetting to the default.</string>
    <string name="no_sdcard_message">The External Storage SD Card is not mounted read/write, cannot install or start Debian without it.</string>
    <string name="no_sdcard_status">(no SD card)</string>
    <string name="terminal_emulator_not_installed">Android Terminal Emulator not installed! To use this feature, you must uninstall Lil\' Debi, install Terminal Emulator, then reinstall Lil\' Debi.</string>
    <string name="terminal_emulator_installed_after_lildebi">ERROR: Android Terminal Emulator was installed after Lil\' Debi! To use this feature, you must uninstall then reinstall Lil\' Debi.</string>
    <string name="title_install_log_view">Install Log</string>
    <string name="title_share_button">Share</string>
    <string name="starting_debian">Started Debian…</string>
    <string name="stopping_debian">Stopped Debian…</string>
    <string name="calculating_checksum">Calculating SHA1 checksum…</string>
    <string name="checksum_complete">SHA1 checksum complete!</string>
    <string name="select_mirror">Select Mirror</string>
    <string name="select_release">Select Release</string>
    <string name="select_arch">Select CPU Architecture</string>
    <string name="app_description">Want an easy Debian chroot running that you can trust? Install Lil’ Debi, and you can have a Debian install running with a single click of a button. It builds up a whole Debian chroot on your phone entirely using debootstrap. You choose the release, mirror, and size of the disk image, and away it goes. It could take up to an hour on a slow device, then its done. The entire package is built from source using publicly available, repeatable builds. It even validates every package using the official Debian repository keys, which are included in the app.</string>
    <string name="pref_install_on_internal_storage_summary">Internal Storage: /data/debian (Beta)</string>
    <string name="pref_install_on_internal_storage_title">Install on Internal Storage</string>
    <string name="install_in_internal_storage_summary">Install Debian into Internal Storage: /data/debian</string>
    <string name="not_enough_space">Not enough space (&lt; 250MB)</string>
    <string name="msfconsole">msfconsole</string>
    <string name="hydra">hydra</string>
    <string name="sqlmap">sqlmap</string>
    <string name="heading2">heading2</string>
    <string name="attack">Attack Modules</string>
    <string name="defence">Defence</string>
    <string name="volatility">volatility</string>
    <string name="truecrypt">truecrypt</string>
    <string name="p0f">p0f</string>
    <string name="pOf">p0f</string>
    <string name="wireshark">Wireshark</string>

</resources>
